ArrayList instead of LinkedList & Util methods & Letter class